# bamboo

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: auth.rs  cli.rs  config.rs  config_resolver.rs  defaults.rs  error.rs  error_reporter.rs  image.rs  init.rs  lib.rs  logging.rs  main.rs  progress.rs  registry.rs  sync.rs  sync_all.rs  sync_engine.rs  sync_spec.rs
src/registry/: copier.rs  memory.rs  mod.rs  oci.rs
tests/: README.md  image_tests.rs  sync_integration_test.rs  sync_test.rs
tests/common/: mock_registry.rs  mod.rs
