[package]
name = "bamboo"
version = "0.1.0"
edition = "2021"
description = "A single-binary CLI for syncing container images between OCI registries"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
oci-distribution = "0.11"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
base64 = "0.22"
humantime = "2.1"
shellexpand = "3.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
