[package]
name = "bamboo"
version = "0.3.5"
edition = "2021"
description = "A single-binary CLI for syncing container images between OCI registries"
repository = "https://github.com/ofyann/bamboo.git"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
oci-distribution = "0.11"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs"] }
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
time = { version = "0.3", features = ["formatting", "macros"] }
async-trait = "0.1"
base64 = "0.22"
humantime = "2.1"
shellexpand = "3.1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
axum = "0.7"
temp-env = "0.3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
